@@ -1,8 +1,8 @@
-package sekoya.front.processus.component;
+package sekoya.front.common.component;
 
 import igloo.wicket.component.CoreLabel;
 import igloo.wicket.model.Models;
-import java.util.List;
+import java.util.Arrays;
 import org.apache.wicket.AttributeModifier;
 import org.apache.wicket.markup.html.form.Radio;
 import org.apache.wicket.markup.html.panel.Panel;
@@ -11,34 +11,32 @@ import org.apache.wicket.markup.repeater.ReuseIfModelsEqualStrategy;
 import org.apache.wicket.model.util.ListModel;
 import org.iglooproject.wicket.more.markup.repeater.collection.CollectionView;
 import org.iglooproject.wicket.more.rendering.EnumRenderer;
-import sekoya.back.business.alea.model.atomic.AleaSensibilite;
+import sekoya.back.business.common.model.atomic.IScore;
 
-public class AleaSensibiliteRatingFormCheckValuesPanel extends Panel {
+public class ScoreRatingFormCheckValuesPanel<E extends Enum<E> & IScore> extends Panel {
 
   private static final long serialVersionUID = 1L;
 
-  public AleaSensibiliteRatingFormCheckValuesPanel(String id) {
+  public ScoreRatingFormCheckValuesPanel(String id, Class<E> clazz) {
     super(id);
 
     add(
         new CollectionView<>(
             "values",
-            new ListModel<>(List.of(AleaSensibilite.values())),
+            new ListModel<>(Arrays.asList(clazz.getEnumConstants())),
             Models.serializableModelFactory()) {
           @Override
-          protected void populateItem(Item<AleaSensibilite> item) {
-            Radio<AleaSensibilite> valueFormComponent = new Radio<>("value", item.getModel());
+          protected void populateItem(Item<E> item) {
+            Radio<E> valueFormComponent = new Radio<>("value", item.getModel());
 
             item.add(
                 valueFormComponent,
-                new CoreLabel("label", item.getModel().map(AleaSensibilite::getScore))
+                new CoreLabel("label", item.getModel().map(E::getScore))
                     .add(AttributeModifier.replace("for", valueFormComponent::getMarkupId))
                     .add(
                         AttributeModifier.replace(
                             "title", EnumRenderer.get().asModel(item.getModel())))
-                    .add(
-                        AttributeModifier.replace(
-                            "data-val", item.getModel().map(AleaSensibilite::getScore))));
+                    .add(AttributeModifier.replace("data-val", item.getModel().map(E::getScore))));
           }
         }.setItemReuseStrategy(ReuseIfModelsEqualStrategy.getInstance()));
   }
